--- a/app/src/main/res/navigation/meal_navigation.xml
+++ b/app/src/main/res/navigation/meal_navigation.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/meal_navigation">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/meal_navigation"
+    app:startDestination="@id/homeFragment">
 
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.semsofs.foodarchitectmvvm.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/favoriteRecipeFragment"
+        android:name="com.semsofs.foodarchitectmvvm.FavoriteRecipeFragment"
+        android:label="fragment_favorite_recipe"
+        tools:layout="@layout/fragment_favorite_recipe" />
 </navigation>
