--- a/app/src/main/res/layout/category_list_item_view.xml
+++ b/app/src/main/res/layout/category_list_item_view.xml
@@ -16,15 +16,15 @@
 
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_width="180dp"
+            android:layout_height="200dp"
             android:layout_margin="16dp"
             app:cardElevation="20dp"
             app:cardCornerRadius="18dp">
 
 
             <ImageView
-                android:id="@+id/randomMealImage"
+                android:id="@+id/categoryImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop" />
