--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,30 +13,27 @@
         android:layout_height="match_parent"
         tools:context=".Fragments.HomeFragment">
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-        </ScrollView>
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="10dp"
             android:orientation="horizontal">
 
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/searchView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:queryHint="食材・材料名でレシピをさがす"
-                android:iconifiedByDefault="false"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="15dp"
-                android:background="@drawable/search_view_bcg"
-                android:queryBackground="@android:color/transparent" />
+            <TextView
+                android:layout_width="350dp"
+                android:textSize="30dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_height="match_parent"
+                android:text="Kurashiru"/>
+
+            <ImageView
+                android:id="@+id/searchRecipe"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_baseline_search_24"/>
 
         </LinearLayout>
 
@@ -51,7 +48,7 @@
                 app:cardElevation="20dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginTop="80dp"
+                android:layout_marginTop="75dp"
                 app:cardCornerRadius="18dp">
 
 
