--- a/app/src/main/res/layout/category_list_item_view.xml
+++ b/app/src/main/res/layout/category_list_item_view.xml
@@ -12,16 +12,15 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity"
         android:layout_gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
 
         <androidx.cardview.widget.CardView
-            android:layout_width="180dp"
-            android:layout_height="200dp"
+            android:layout_width="240dp"
+            android:layout_height="320dp"
             android:layout_margin="16dp"
             app:cardElevation="20dp"
             app:cardCornerRadius="18dp">
-
 
             <ImageView
                 android:id="@+id/categoryImage"
@@ -29,9 +28,19 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop" />
 
+
         </androidx.cardview.widget.CardView>
 
-
+        <TextView
+            android:id="@+id/categoryName"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="@string/app_name"
+            android:gravity="center"/>
 
 
     </LinearLayout>
