--- a/app/src/main/res/layout/category_list_item_view.xml
+++ b/app/src/main/res/layout/category_list_item_view.xml
@@ -16,8 +16,8 @@
 
 
         <androidx.cardview.widget.CardView
-            android:layout_width="240dp"
-            android:layout_height="320dp"
+            android:layout_width="180dp"
+            android:layout_height="250dp"
             android:layout_margin="16dp"
             app:cardElevation="20dp"
             app:cardCornerRadius="18dp">
@@ -33,14 +33,14 @@
 
         <TextView
             android:id="@+id/categoryName"
-            android:layout_width="250dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="80dp"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:text="@string/app_name"
-            android:gravity="center"/>
+            android:text="Beef"
+            android:textAlignment="center" />
 
 
     </LinearLayout>
