--- a/app/src/main/res/layout/category_list_item_view.xml
+++ b/app/src/main/res/layout/category_list_item_view.xml
@@ -10,17 +10,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
         android:layout_gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:context=".MainActivity">
 
 
         <androidx.cardview.widget.CardView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_margin="16dp"
-            app:cardElevation="20dp"
-            app:cardCornerRadius="45dp">
+            android:layout_margin="8dp"
+            app:cardCornerRadius="48dp"
+            app:cardElevation="15sp">
 
             <ImageView
                 android:id="@+id/categoryImage"
@@ -35,12 +35,12 @@
             android:id="@+id/categoryName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="45dp"
+            android:text="Beef"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="12sp"
-            android:textStyle="bold"
-            android:text="Beef"
-            android:textAlignment="center" />
+            android:layout_marginStart="35dp"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
