--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,13 +22,14 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_margin="10dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 app:cardCornerRadius="20dp">
 
                 <androidx.appcompat.widget.SearchView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:queryHint="レシピ検索"
+                    android:autofillHints="Recipe"
                     android:layout_margin="10dp"/>
 
 
@@ -49,7 +50,7 @@
                 app:cardElevation="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginTop="85dp"
+                android:layout_marginTop="65dp"
                 app:cardCornerRadius="18dp">
 
 
@@ -66,7 +67,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="325dp"
+            android:layout_marginTop="300dp"
             android:orientation="vertical">
 
             <TextView
@@ -75,7 +76,7 @@
                 android:text="Categories"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:textSize="30sp"
+                android:textSize="28sp"
                 android:textColor="@color/black"/>
 
             <androidx.recyclerview.widget.RecyclerView
