--- a/app/src/main/res/layout/activity_random_meal_detail.xml
+++ b/app/src/main/res/layout/activity_random_meal_detail.xml
@@ -12,11 +12,28 @@
         android:layout_height="match_parent"
         tools:context=".RandomMealDetailActivity">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="230dp"
-            android:background="@color/white"
-            android:orientation="vertical">
+            android:background="#978484">
+
+            <ImageView
+                android:id="@+id/randomMealImageDetail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"/>
+
+            <TextView
+                android:id="@+id/randomMealName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textStyle="bold"
+                android:fontFamily="@font/bagiste"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="190dp"/>
 
             <!--        <androidx.appcompat.widget.Toolbar-->
             <!--            android:layout_width="match_parent"-->
@@ -31,15 +48,20 @@
 
             <!--        </androidx.appcompat.widget.Toolbar>-->
 
-            <ImageView
-                android:id="@+id/randomMealImageDetail"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/cuminicon"/>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/randomMealCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="240dp"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/fantasik"
+            android:layout_marginStart="8dp"
+            android:text="@string/app_name"/>
 
 
-        </LinearLayout>
 
     </FrameLayout>
 </layout>
