--- a/app/src/main/res/layout/activity_random_meal_detail.xml
+++ b/app/src/main/res/layout/activity_random_meal_detail.xml
@@ -15,6 +15,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="230dp"
+            android:gravity="center"
             android:background="#978484">
 
             <ImageView
@@ -25,15 +26,16 @@
 
             <TextView
                 android:id="@+id/randomMealName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
                 android:textStyle="bold"
                 android:fontFamily="@font/bagiste"
                 android:textColor="@color/white"
-                android:textSize="22sp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="190dp"/>
+                android:textSize="24sp"
+                android:textAlignment="center"
+                android:layout_marginTop="180dp"/>
+
 
             <!--        <androidx.appcompat.widget.Toolbar-->
             <!--            android:layout_width="match_parent"-->
@@ -50,16 +52,26 @@
 
         </RelativeLayout>
 
-        <TextView
-            android:id="@+id/randomMealCategory"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addToFavoriteButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="240dp"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/fantasik"
-            android:layout_marginStart="8dp"
-            android:text="@string/app_name"/>
+            android:layout_marginTop="200dp"
+            android:backgroundTint="#FFEA00"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/bookmark_border"
+            android:layout_gravity="end"/>
+
+<!--        <TextView-->
+<!--            android:id="@+id/randomMealCategory"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="240dp"-->
+<!--            android:textSize="18sp"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:fontFamily="@font/bagiste"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:text="@string/app_name"/>-->
 
 
 
