Added popular meal list

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/recipe"
         android:id="@+id/homeFragment"/>
 
+    <item android:title="Search"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:id="@+id/searchRecipeFragment"/>
+
     <item android:title="Favorite"
         android:icon="@drawable/star"
         android:id="@+id/favoriteRecipeFragment"/>
