--- a/app/src/main/res/layout/activity_random_meal_detail.xml
+++ b/app/src/main/res/layout/activity_random_meal_detail.xml
@@ -74,6 +74,17 @@
 <!--            android:text="@string/app_name"/>-->
 
 
+<!--        <TextView-->
+<!--            android:id="@+id/randomMealInstruction"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_marginTop="320dp"-->
+<!--            android:text="@string/app_name"-->
+<!--            android:textSize="14sp"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textStyle="bold"-->
+<!--            android:layout_marginStart="4dp" />-->
+
 
     </FrameLayout>
 </layout>
