--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,20 +19,20 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_margin="10dp"
-                android:layout_height="50dp"
-                app:cardCornerRadius="20dp">
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_margin="10dp"-->
+<!--                android:layout_height="50dp"-->
+<!--                app:cardCornerRadius="20dp">-->
 
-                <androidx.appcompat.widget.SearchView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:queryHint="レシピ"
-                    android:layout_margin="10dp"/>
+<!--                <androidx.appcompat.widget.SearchView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    app:queryHint="レシピ"-->
+<!--                    android:layout_margin="10dp"/>-->
 
 
-            </androidx.cardview.widget.CardView>
+<!--            </androidx.cardview.widget.CardView>-->
 
 
         </LinearLayout>
@@ -49,7 +49,7 @@
                 app:cardElevation="10dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginEnd="6dp"
-                android:layout_marginTop="65dp"
+                android:layout_marginTop="10dp"
                 app:cardCornerRadius="12dp">
 
 
@@ -65,24 +65,43 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="250dp"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Categories"
-                android:gravity="center"
                 android:fontFamily="@font/bagiste"
                 android:textStyle="bold"
-                android:textSize="22sp"
+                android:textAlignment="center"
+                android:textSize="20sp"
                 android:textColor="@color/black"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/categoryRecyclerView"
                 android:layout_width="match_parent"
+                android:layout_height="220dp"/>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Popular Items"
+                android:fontFamily="@font/bagiste"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:layout_marginTop="6dp"
+                android:textColor="@color/black"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/popularItemRecyclerView"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
+
+
 
         </LinearLayout>
 
