--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:itemIconTint="#FFC400"
+        app:itemIconTint="@drawable/bottom_navigation_selector"
         app:itemTextColor="@color/black"
         app:menu="@menu/bottom_nav_menu"/>
 
