--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,103 +8,112 @@
     </data>
 
 
-    <FrameLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".Fragments.HomeFragment">
+        android:layout_height="match_parent">
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-<!--            <androidx.cardview.widget.CardView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:layout_height="50dp"-->
-<!--                app:cardCornerRadius="20dp">-->
-
-<!--                <androidx.appcompat.widget.SearchView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    app:queryHint="レシピ"-->
-<!--                    android:layout_margin="10dp"/>-->
-
-
-<!--            </androidx.cardview.widget.CardView>-->
-
-
-        </LinearLayout>
-
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            tools:context=".Fragments.HomeFragment">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/randomMealCard"
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="225dp"
-                app:cardElevation="10dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginEnd="6dp"
-                android:layout_marginTop="10dp"
-                app:cardCornerRadius="12dp">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <!--            <androidx.cardview.widget.CardView-->
+                <!--                android:layout_width="match_parent"-->
+                <!--                android:layout_margin="10dp"-->
+                <!--                android:layout_height="50dp"-->
+                <!--                app:cardCornerRadius="20dp">-->
+
+                <!--                <androidx.appcompat.widget.SearchView-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="match_parent"-->
+                <!--                    app:queryHint="レシピ"-->
+                <!--                    android:layout_margin="10dp"/>-->
 
 
-                <ImageView
-                    android:id="@+id/randomMealImage"
+                <!--            </androidx.cardview.widget.CardView>-->
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/randomMealCard"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop" />
+                    android:layout_height="225dp"
+                    app:cardElevation="10dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginEnd="6dp"
+                    android:layout_marginTop="10dp"
+                    app:cardCornerRadius="12dp">
 
-            </androidx.cardview.widget.CardView>
 
-        </LinearLayout>
+                    <ImageView
+                        android:id="@+id/randomMealImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="250dp"
-            android:orientation="vertical">
+                </androidx.cardview.widget.CardView>
 
-            <TextView
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Categories"
-                android:fontFamily="@font/bagiste"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:textColor="@color/black"/>
+                android:layout_marginTop="245dp"
+                android:orientation="vertical">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/categoryRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="220dp"/>
+                <TextView
+                    android:id="@+id/categoryTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Breakfast"
+                    android:fontFamily="@font/fantasik"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/popularItemRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Categories"
+                    android:fontFamily="@font/bagiste"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/categoryRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp"/>
 
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Popular Items"
-                android:fontFamily="@font/bagiste"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:layout_marginTop="6dp"
-                android:textColor="@color/black"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/popularItemRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+            </LinearLayout>
+
+
+        </FrameLayout>
 
 
 
-        </LinearLayout>
+    </ScrollView>
 
 
-    </FrameLayout>
 </layout>
