--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -16,8 +16,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/pancakesplash"/>
+            android:scaleType="centerInside"
+            android:src="@drawable/chef"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -27,7 +27,7 @@
             android:textSize="28sp"
             android:layout_gravity="bottom"
             android:textColor="@color/white"
-            android:text="The Chef"/>
+            android:text="Recipe"/>
 
 
     </FrameLayout>
