--- a/app/src/main/res/layout/youtube_player.xml
+++ b/app/src/main/res/layout/youtube_player.xml
@@ -7,84 +7,70 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".RandomMealDetailActivity">
 
-        <FrameLayout
-            android:id="@+id/frameLayout"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".RandomMealDetailActivity">
 
-            <com.google.android.youtube.player.YouTubePlayerView
-                android:id="@+id/youtubeApiView"
+            <FrameLayout
+                android:id="@+id/frameLayout"
                 android:layout_width="match_parent"
-                android:layout_height="240dp" />
+                android:layout_height="match_parent"
+                tools:context=".RandomMealDetailActivity">
 
-            <!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-            <!--                android:id="@+id/addToFavoriteButton"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_marginTop="252dp"-->
-            <!--                android:backgroundTint="#FFEA00"-->
-            <!--                android:layout_marginEnd="8dp"-->
-            <!--                android:src="@drawable/bookmark_border"-->
-            <!--                android:layout_gravity="end"/>-->
+                <com.google.android.youtube.player.YouTubePlayerView
+                    android:id="@+id/youtubeApiView"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp" />
 
-        </FrameLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="250dp"
-            android:orientation="vertical"
-            android:gravity="start">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="250dp"
+                    android:orientation="vertical"
+                    app:layout_constraintTop_toBottomOf="@+id/frameLayout">
 
-            <TextView
-                android:id="@+id/Tags"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="手順 "
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginRight="330dp"
-                android:layout_marginBottom="200dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/Instructions"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="手順 "-->
-<!--                android:textColor="@color/black"-->
-<!--                android:textSize="18sp"-->
-<!--                android:textStyle="bold"-->
-<!--                android:layout_marginRight="330dp"-->
-<!--                android:layout_marginBottom="200dp"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent" />-->
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="手順 "
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/Instructions"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="手順 "
+                            android:textColor="@color/black"
+                            android:textSize="14sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+
+                    </ScrollView>
 
 
 
 
-
-        </LinearLayout>
-
-
+                </LinearLayout>
+            </FrameLayout>
 
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
