Update: Category List adapter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    tools:context=".MainActivity"
+    tools:context=".Activitiy.MainActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <fragment
