--- a/app/src/main/res/layout/activity_random_meal_detail.xml
+++ b/app/src/main/res/layout/activity_random_meal_detail.xml
@@ -10,7 +10,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".RandomMealDetailActivity">
+        tools:context=".Activitiy.RandomMealDetailActivity">
 
 <!--        <RelativeLayout-->
 <!--            android:layout_width="match_parent"-->
