--- a/app/src/main/res/layout/category_list_item_view.xml
+++ b/app/src/main/res/layout/category_list_item_view.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:orientation="vertical"
-        tools:context=".MainActivity">
+        tools:context=".Activitiy.MainActivity">
 
 
         <androidx.cardview.widget.CardView
