--- a/app/src/main/res/layout/popular_item_list_view.xml
+++ b/app/src/main/res/layout/popular_item_list_view.xml
@@ -14,7 +14,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:orientation="vertical"
-            tools:context=".MainActivity">
+            tools:context=".Activitiy.MainActivity">
 
 
             <androidx.cardview.widget.CardView
